docs: (PERF.HW.e) retracted before it was built, and round 878's D is wrong
The queued item said the ~400 tail passes are program-wide, every worker
runs all of them, so run them once in the sequential prefix and share.
Every clause was checked before anything was built and the conclusion
does not survive. Nothing was landed; that is the result.

The arithmetic that should have come first: duplicated work that is
CONCURRENT does not cost wall — wall = D + A/N whether D runs in one
worker or in all N — so hoisting D to the SERIAL prefix gives D + A/N
too, unchanged at best and strictly worse to the extent the hoisted work
was already partition-scoped. The entry reasoned from a count of
duplicated passes and never asked what removing them returns.

Measured with the PassLab (no recompile, `disable` for all 445 non-spine
non-init passes): the tail is 4,342 ms of a sequential compile
(24,600 -> 20,258) but only ~1.3-2.7 s of w4 wall (ABBA x2: ON 15,723 /
16,190, OFF 12,398 / 14,098, OFF arm spreading 12.8%). The per-worker
rows say why — with the tail off, w0 (1 file) drops 1,194 ms while w1
(26 files) drops 3,651, so the tail is ~1.1 s duplicated per worker plus
~98 ms per ASSIGNED FILE, i.e. mostly partition-scoped already. Hoisting
it would have added 4.3 s of serial time to save ~1.9 s per worker: a
net ~2.4 s loss.

Round 878's D = 9.4-11.2 s is retracted. That fit drew its points from
different worker levels, where contention differs (the same single file
costs 13,503 ms at w4 and 15,885 ms at w6), so the slope absorbed the
contention and dumped it into the intercept; fitting within one level
gives D ~ 3.7 s. What survives is the observation, not the model.

What the numbers do say is a bigger target: checkSpine is essentially
fully partition-scoped, yet at the sequential rate of 2.02 ms per k-char
w0's assigned share plus its bind should be ~8.2 s against 12.3 s
measured. Each worker runs its own work ~50% slower than the same work
runs sequentially — that gap, n